# swagger/swagger.json
@@ -29,23 +29,25 @@
     "https",
     "http"
   ],
-  "consumes": [],
-  "produces": [],
   "paths": {
     "/": {
       "get": {
-        "tags": [],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/login": {
       "get": {
-        "tags": [],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     },
     "/events/": {
@@ -55,7 +57,6 @@
         ],
         "summary": "Get all events",
         "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "List of events",
@@ -215,7 +216,6 @@
         ],
         "summary": "Get all venues",
         "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "A list of venues",
@@ -368,6 +368,56 @@
         }
       }
     },
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/failure": {
+      "get": {
+        "description": "",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/auth/status": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/auth/logout": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "tags": [
@@ -375,7 +425,6 @@
         ],
         "summary": "Get all users",
         "description": "",
-        "parameters": [],
         "responses": {
           "200": {
             "description": "List of users",
@@ -527,6 +576,183 @@
           }
         }
       }
+    },
+    "/registrations/": {
+      "get": {
+        "tags": [
+          "Registrations"
+        ],
+        "summary": "Get all registrations",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Registrations"
+        ],
+        "summary": "Create registration",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "eventId": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                },
+                "ticketType": {
+                  "example": "any"
+                },
+                "ticketStatus": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/registrations/{id}": {
+      "get": {
+        "tags": [
+          "Registrations"
+        ],
+        "summary": "Get registration by ID",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Registrations"
+        ],
+        "summary": "Update registration",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "quantity": {
+                  "example": "any"
+                },
+                "eventId": {
+                  "example": "any"
+                },
+                "userId": {
+                  "example": "any"
+                },
+                "ticketType": {
+                  "example": "any"
+                },
+                "ticketStatus": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Registrations"
+        ],
+        "summary": "Delete registration",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -574,8 +800,8 @@
           "example": 18
         },
         "price": {
-          "type": "number",
-          "example": 25.5
+          "type": "string",
+          "example": "$25.5"
         },
         "status": {
           "type": "string",
@@ -631,8 +857,8 @@
           "example": 18
         },
         "price": {
-          "type": "number",
-          "example": 25.5
+          "type": "string",
+          "example": "$25.5"
         },
         "status": {
           "type": "string",
